cabal-version:      2.4
name:               tiktoken
version:            1.0.0
synopsis:           Haskell implementation of tiktoken
description:        This packages only implements tokenization.  In other words,
                    given an existing encoding (`cl100k_base`) you can tokenize
                    an input.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Gabriella Gonzalez
maintainer:         GenuineGabriella@gmail.com

extra-source-files: `README.md`

library
    build-depends:    base            >= 4.18.0.0 && < 5
                    , base64          >= 1.0      && < 1.1
                    , bytestring
                    , bytestring-trie >= 0.2.4    && < 0.3
                    , megaparsec                     < 9.7
                    , text                           < 2.2
                    , transformers    >= 0.2.0.0
                    , vector                         < 0.14
    hs-source-dirs:   src
    exposed-modules:  Tiktoken
    ghc-options:      -Wall
    default-language: Haskell2010
