cabal-version:      2.4
name:               tiktoken
version:            1.0.0
synopsis:           Haskell implementation of tiktoken
description:        This packages only implements tokenization.  In other words,
                    given an existing encoding (`cl100k_base`) you can tokenize
                    an input.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Gabriella Gonzalez
maintainer:         GenuineGabriella@gmail.com

extra-source-files: `README.md`
data-dir:           data

library
    build-depends:    base            >= 4.18.0.0 && < 5
                    , base64          >= 1.0      && < 1.1
                    , bytestring      >= 0.11.3.0
                    , bytestring-trie >= 0.2.4    && < 0.3
                    , containers      >= 0.5.0.0
                    , deepseq         >= 1.4.0.0
                    , filepath
                    , megaparsec                     < 9.7
                    , text
                    , transformers    >= 0.2.0.0
                    , vector                         < 0.14
    hs-source-dirs:   src
    exposed-modules:  Tiktoken
    other-modules:    Paths_tiktoken
    ghc-options:      -Wall
    default-language: Haskell2010

benchmark benchmark
    hs-source-dirs:   benchmark
    main-is:          Main.hs
    type:             exitcode-stdio-1.0
    build-depends:    base
                    , bytestring
                    , deepseq
                    , filepath
                    , tasty-bench < 0.4
                    , tiktoken
    other-modules:    Paths_tiktoken
    ghc-options:      -with-rtsopts=-A32m -fproc-alignment=64
